End of section 10

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -8,7 +8,7 @@ background-color: #EAEAEA !important;
 }
 
 .react-calendar {
-    width: 100%;
+    width:"100%";
     border: none;
     box-shadow: 0 1px 2px 0 rgba(34, 36, 38, .15);
 
