--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -13,6 +13,10 @@ background-color: #EAEAEA !important;
     box-shadow: 0 1px 2px 0 rgba(34, 36, 38, .15);
 
 }
+.react-datepicker-wrapper {
+  width: 100%;
+}
+
 /*home page styles*/
 
 .masthead {
